--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1337,6 +1337,10 @@ input:invalid, textarea:invalid, select:invalid {
   bottom: 0px;
 }
 
+.-bottom-1 {
+  bottom: -0.25rem;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -1453,6 +1457,10 @@ input:invalid, textarea:invalid, select:invalid {
   margin-bottom: 0.25rem;
 }
 
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -1531,14 +1539,6 @@ input:invalid, textarea:invalid, select:invalid {
 
 .ms-2 {
   margin-inline-start: 0.5rem;
-}
-
-.ms-3 {
-  margin-inline-start: 0.75rem;
-}
-
-.ms-auto {
-  margin-inline-start: auto;
 }
 
 .mt-1 {
@@ -1645,10 +1645,6 @@ input:invalid, textarea:invalid, select:invalid {
   height: 2.25rem;
 }
 
-.h-\[calc\(100\%-1rem\)\] {
-  height: calc(100% - 1rem);
-}
-
 .h-full {
   height: 100%;
 }
@@ -1663,10 +1659,6 @@ input:invalid, textarea:invalid, select:invalid {
 
 .max-h-0 {
   max-height: 0px;
-}
-
-.max-h-full {
-  max-height: 100%;
 }
 
 .min-h-screen {
@@ -1729,16 +1721,17 @@ input:invalid, textarea:invalid, select:invalid {
   width: auto;
 }
 
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .w-full {
   width: 100%;
 }
 
 .min-w-0 {
   min-width: 0px;
-}
-
-.max-w-2xl {
-  max-width: 42rem;
 }
 
 .max-w-3xl {
@@ -1984,12 +1977,6 @@ input:invalid, textarea:invalid, select:invalid {
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
-.space-y-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
-
 .space-y-6 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -2023,10 +2010,6 @@ input:invalid, textarea:invalid, select:invalid {
   overflow-y: auto;
 }
 
-.overflow-x-hidden {
-  overflow-x: hidden;
-}
-
 .truncate {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -2055,11 +2038,6 @@ input:invalid, textarea:invalid, select:invalid {
 
 .rounded-none {
   border-radius: 0px;
-}
-
-.rounded-b {
-  border-bottom-right-radius: 0.25rem;
-  border-bottom-left-radius: 0.25rem;
 }
 
 .rounded-b-3xl {
@@ -2100,11 +2078,6 @@ input:invalid, textarea:invalid, select:invalid {
 .rounded-s-md {
   border-start-start-radius: 0.375rem;
   border-end-start-radius: 0.375rem;
-}
-
-.rounded-t {
-  border-top-left-radius: 0.25rem;
-  border-top-right-radius: 0.25rem;
 }
 
 .rounded-br-lg {
@@ -2338,10 +2311,6 @@ input:invalid, textarea:invalid, select:invalid {
 .bg-teal-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(4 116 129 / var(--tw-bg-opacity));
-}
-
-.bg-transparent {
-  background-color: transparent;
 }
 
 .bg-white {
@@ -2638,6 +2607,11 @@ input:invalid, textarea:invalid, select:invalid {
 
 .tracking-wide {
   letter-spacing: 0.025em;
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-blue-500 {
@@ -2992,6 +2966,10 @@ input:invalid, textarea:invalid, select:invalid {
   --tw-bg-opacity: 1;
   background-color: rgb(109 40 217 / var(--tw-bg-opacity));
 }
+.hover\:bg-slate-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+}
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -3327,9 +3305,6 @@ input:invalid, textarea:invalid, select:invalid {
   }
 }
 @media (min-width: 768px) {
-  .md\:inset-0 {
-    inset: 0px;
-  }
   .md\:mt-5 {
     margin-top: 1.25rem;
   }
@@ -3356,9 +3331,6 @@ input:invalid, textarea:invalid, select:invalid {
   }
   .md\:items-center {
     align-items: center;
-  }
-  .md\:p-5 {
-    padding: 1.25rem;
   }
   .md\:text-5xl {
     font-size: 3rem;
@@ -3433,10 +3405,6 @@ input:invalid, textarea:invalid, select:invalid {
 :is(:where(.dark) .dark\:border-blue-500) {
   --tw-border-opacity: 1;
   border-color: rgb(59 130 246 / var(--tw-border-opacity));
-}
-:is(:where(.dark) .dark\:border-gray-500) {
-  --tw-border-opacity: 1;
-  border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }
 :is(:where(.dark) .dark\:border-gray-600) {
   --tw-border-opacity: 1;
@@ -3630,10 +3598,6 @@ input:invalid, textarea:invalid, select:invalid {
 :is(:where(.dark) .dark\:focus\:ring-blue-800:focus) {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(30 64 175 / var(--tw-ring-opacity));
-}
-:is(:where(.dark) .dark\:focus\:ring-gray-600:focus) {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(75 85 99 / var(--tw-ring-opacity));
 }
 :is(:where(.dark) .dark\:focus\:ring-primary-500:focus) {
   --tw-ring-opacity: 1;
